<resources>
    <string name="app_name">TestApp</string>
    <string name="start">Start:</string>
    <string name="end">End:</string>
    <string name="start_save">Start Save:</string>
    <string name="end_save">End Save:</string>
    <string name="btn1">Button1</string>
    <string name="btn2">Button2</string>
    <string name="btn3">Button3</string>
    <string name="btn4">Button4</string>
    <string name="curr_unix">Current UNIX timestamp</string>
</resources>
