<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.karanc.testapp.MainActivity">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:gravity="center"
            android:padding="4dp"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_below="@+id/header"
        android:id="@+id/box_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/box_tier_one"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Top Left-->
            <LinearLayout
                android:id="@+id/box_left_one"
                style="@style/Box_Style"
                android:layout_gravity="left">

                <LinearLayout
                    android:id="@+id/r_11layout"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                android:id="@+id/text_start_comment_l1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"/>

             <EditText
                 android:id="@+id/value_start_comment_l1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                  />
            </LinearLayout>

                <LinearLayout
                    android:id="@+id/r_12layout"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_end_comment_l1"
                android:layout_below="@+id/text_start_comment_l1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"/>

                <EditText
                    android:id="@+id/value_end_comment_l1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/r_13layout"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                  android:id="@+id/text_start_save_comment_l1"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                    android:text="@string/start_save"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/value_start_save_comment_l1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/r_14layout"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_end_save_comment_l1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_save"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/value_end_save_comment_l1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

            <!-- Top Right -->

            <LinearLayout
                android:id="@+id/box_right_one"
                android:layout_gravity="right"
                style="@style/Box_Style">

                <LinearLayout
                    android:id="@+id/r01layout"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_start_comment_r1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/value_start_comment_r1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/r02layout"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_end_comment_r1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/value_end_comment_r1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/r03layout"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_start_save_comment_r1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_save"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/value_start_save_comment_r1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                 </LinearLayout>

                <LinearLayout
                    android:id="@+id/r04layout"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_end_save_comment_r1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_save"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/value_end_save_comment_r1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            </LinearLayout>

            </LinearLayout>

            <!-- Bottom Left-->
        <LinearLayout
            android:id="@+id/box_tier_two"
            android:layout_below="@+id/box_tier_one"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
                android:id="@+id/box_left_two"
                style="@style/Box_Style"
                android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/r11layout"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_start_comment_l2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/value_start_comment_l2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
             </LinearLayout>

            <LinearLayout
                android:id="@+id/r12layout"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_end_comment_l2"
                android:layout_below="@+id/text_start_comment_l2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/value_end_comment_l2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/r13layout"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_start_save_comment_l2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start_save"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/value_start_save_comment_l2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

                </LinearLayout>

            <LinearLayout
                android:id="@+id/r14layout"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_end_save_comment_l2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_save"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/value_end_save_comment_l2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        </LinearLayout>


            <!-- Bottom Right-->

            <LinearLayout
                android:id="@+id/box_right_two"
                style="@style/Box_Style"
                android:layout_gravity="right">

                <LinearLayout
                    android:id="@+id/r21layout"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_start_comment_r2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>

                <EditText
                    android:text="jhjh"
                    android:id="@+id/value_start_comment_r2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                </LinearLayout>

            <LinearLayout
                android:id="@+id/r22layout"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/text_end_comment_r2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>

                <EditText
                    android:text="gfghg"
                    android:id="@+id/value_end_comment_r2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                </LinearLayout>

            <LinearLayout
                android:id="@+id/r23layout"
                android:layout_below="@+id/r22layout"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/text_start_save_comment_r2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_save"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>

                <EditText
                    android:text="lop"
                    android:id="@+id/value_start_save_comment_r2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                   />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/r24layout"
                    android:layout_below="@+id/r23layout"
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_end_save_comment_r2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_save"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold"/>

                <EditText
                    android:text="fdfd"
                    android:id="@+id/value_end_save_comment_r2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

        <RelativeLayout
            android:id="@+id/bottom_container"
            android:layout_below="@+id/box_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/btn12layout"
                android:padding="2dp"
                android:layout_margin="2dp"
                android:layout_width="match_parent"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

               <Button
                   android:id="@+id/btn1"
                   android:padding="2dp"
                   android:layout_margin="2dp"
                   android:background="@color/colorAccent"
                   android:layout_width="0dp"
                   android:text="@string/btn1"
                   android:layout_height="wrap_content"
                   android:layout_weight="1"/>

                <Button
                    android:id="@+id/btn2"
                    android:padding="2dp"
                    android:layout_margin="2dp"
                    android:background="@color/colorAccent"
                    android:layout_width="0dp"
                    android:text="@string/btn2"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn34layout"
                android:padding="2dp"

                android:layout_margin="2dp"
                android:layout_below="@+id/btn12layout"
                android:layout_width="match_parent"
                android:weightSum="4"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn3"
                    android:padding="2dp"
                    android:layout_margin="2dp"
                    android:background="@color/colorAccent"
                    android:layout_width="0dp"
                    android:text="@string/btn3"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>

                <Button
                    android:id="@+id/btn4"
                    android:padding="2dp"
                    android:layout_margin="2dp"
                    android:background="@color/colorAccent"
                    android:layout_width="0dp"
                    android:text="@string/btn4"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>

            </LinearLayout>

            <!--
            <Button
                android:id="@+id/curr_unix_ts"
                android:layout_margin="8dp"
                android:padding="2dp"
                android:background="@color/colorAccent"
                android:layout_below="@+id/btn34layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/curr_unix"/>

            -->

        </RelativeLayout>




</RelativeLayout>
</ScrollView>
